--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,107 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    margin: 0;
+    background-color: #1C6758;
+    padding: 100px 20px;
+    font-family: 'Roboto', sans-serif;
+}
+
+main {
+    background-color: #F5F5F5;
+    height: 400px;
+    max-width: 800px;
+    border-radius: 5px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.title {
+    font-size: 40px;
+    margin: 0;
+}
+
+.instructions {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    margin-top: 10px;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.timer-container {
+    margin-bottom: 20px;
+    font-size: 20px;
+    color: red;
+}
+
+.time-text {
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.dice-container {
+    display: grid;
+    grid-template: auto auto / repeat(5, 1fr);
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.die-face {
+    height: 50px;
+    width: 50px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.die-num {
+    font-size: 2rem;
+}
+
+.roll-dice {
+    height: 60px;
+    width: 150px;
+    padding-block: 5px;
+    border: none;
+    border-radius: 6px;
+    background-color: #874C62;
+    color: white;
+    font-size: 1.1rem;
+    font-family: 'Karla', sans-serif;
+    cursor: pointer;
+}
+
+.roll-dice:focus {
+    outline: none;
+}
+
+.roll-dice:active {
+    box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+}
+
+@media only screen and (max-width: 374px) {
+    .dice-container {
+        gap: 10px;
+    }
+    
+    .die-face {
+        height: 45px;
+        width: 45px;
+    }
+}
+
+@media only screen and (min-width: 375px) and (max-width: 424px) {
+    .dice-container {
+        gap: 15px;
+    }
 }
